app/components/NoteEditor/Note/Note.css
.container {
  margin: 0;
  margin-bottom: 7px;
  padding: 5px;
  background-color: #ffe;
  border: solid 1px #ff0;
}

.metadata {
  padding-bottom: 5px;
  font-size: 0.7rem;
  font-style: italic;
}

.content,
.emptyContent {
  white-space: pre-wrap;
  font-size: 0.9rem;
}

.emptyContent {
  font-style: italic;
}

.contentEditor {
  min-height: 100px;
}

.icon {
  padding-left: 10px;
}

.delete {
  float: right;
  cursor: pointer;
}

